--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@ export default function App() {
 
       </code>
     </pre>
-<h1 class="align">Node js tutorials L-1</h1>
-<h3 class="align">Module reading and appending</h3>
-<h4>moules- fs , adding , appending , renaming</h4>
+<h1 class="align">Node js tutorials L-2</h1>
+<h3 class="align">Module reading and appending and deleteing</h3>
+<h4>moules- fs , adding , appending , renaming , deleting , creating a folder</h4>
 <pre>
 <code class="language-javascript">
 const fs =  require('fs');
