--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ fs.unlink("./NewFolf/newFile.txt" , (e)=>{
 </code>
 </pre>
 
-<h1 class="align">Node js tutorials async L-2</h1>
+<h1 class="align">Node js tutorials L-2</h1>
 <h3 class="align">Module reading and appending and deleteing</h3>
 <h4>moules- fs , adding , appending , renaming , deleting , creating a folder</h4>
 <pre>
@@ -268,6 +268,26 @@ fs.readFile("newfile.txt" , (error , data)=>{
         console.log(newData);  
     }
 } ) 
+</code>
+</pre>
+
+<h1 class="align">Node js tutorials L-3</h1>
+<h3 class="align">Creating web servers</h3>
+<h4>making a https request</h4>
+<pre>
+<code class="language-javascript">
+import https from "https";
+import chalk from "chalk";
+// creating a server
+const color = chalk.yellow.underline.inverse;
+const server = https.createServer((req , res)=>{
+    res.end("halloo");
+})
+
+// listening to the port at something 
+server.listen(3000 , "127.0.0.1" , ()=>{
+    console.log(color("listening to the server at 3000"));
+});
 </code>
 </pre>
 
