--- a/index.html
+++ b/index.html
@@ -333,6 +333,94 @@ server.listen(port, (error) => {
   
 </code>
 </pre>
+<h1 class="align">Node js tutorials L-5</h1>
+<h3 class="align">json to object </h3>
+<h4>and vice versa</h4>
+<pre>
+<code class="language-javascript">
+import chalk from "chalk";
+import fs from "fs"
+const color1 = chalk.white.underline.inverse;
+const color3 = chalk.green.underline.inverse;
+const color2 = chalk.red.underline.inverse;
+
+// making a object
+const data = {
+    name : "Ankit Singh Chauhan" , 
+    class : "Dhant",
+    school : "Gurukul International"
+}
+
+// converting to JSON file
+const jsonData =  JSON.stringify(data);
+console.log(color1(jsonData));
+
+//  converting back to object;
+const newObj = JSON.parse(jsonData);
+// console.log(newObj)
+
+fs.writeFile("new.json" , jsonData , (error)=>{
+  // callback hell hrererererere!!
+    console.log(error);
+})
+
+fs.readFile("new.json" , "utf-8" , (err , data)=>{
+    const originalData = JSON.parse(data);
+    console.log(originalData);
+    console.log(data);
+})
+</code>
+</pre>
+<h1 class="align">Node js tutorials L-6</h1>
+<h3 class="align">Making an API</h3>
+<h4>made and apii</h4>
+<pre>
+<code class="language-javascript">
+import http from "http";
+import chalk from "chalk";
+import url from "url";
+import fs from "fs";
+
+const port = 9090;
+const color = chalk.red.underline.inverse;
+
+const server = http.createServer((req, res) => {
+
+  // fetching data at the end to avoid fetching again,
+    const newData = fs.readFileSync("new.json" , "utf-8");
+
+    res.setHeader('Content-Type', 'text/plain');
+    if (req.url === '/') {
+        res.end("Hello and welcome to the home page of the website");
+    }
+    else if (req.url === "/about") {
+        res.end("hamare baare mein jaankar kya karoge hum dil mein aate hai samaja m nhi")
+    }
+    else if (req.url === "/contact") {
+        res.end("NUMBER TOH SIRF LADKIYON KO DETA HU");
+    }
+    else if (req.url === "/apis") {
+        res.writeHead(200 , {"Content-type" : "Json - data"});
+        res.end(newData);
+    }
+    else {
+        res.writeHead(404 , {"Content-type" :"pdf"});
+        res.end("404 error occured")
+    }
+});
+
+// listening to the port at something 
+server.listen(port, (error) => {
+    if (error) {
+        console.log(color("something went wrong here"));
+    }
+    else {
+        console.log(color("stated listening to the port"));
+    }
+});
+
+</code>
+</pre>
 
 
 </body>
